# var-reduction-pricing

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
benchmarks/: timing_benchmark.cpp
data/: convergence_results.csv
include/analytics/: BlackScholesClosedForm.hpp  CalibrateControl.hpp
include/core/: MonteCarloEngine.hpp  OnlineCovariance.hpp  OnlineStatistics.hpp  RandomEngine.hpp
include/market/: Discount.hpp  FlatDiscount.hpp
include/models/: BlackScholesModel.hpp  Model.hpp
include/options/: EuropeanOption.hpp  NoOption.hpp  Option.hpp
include/samplers/: AntitheticSampler.hpp  ControlSampler.hpp  MCSampler.hpp  PathSampler.hpp
report/: VarReductionPricing.tex
src/: main.cpp
src/analytics/: BlackScholesClosedForm.cpp  CalibrateControl.cpp
src/core/: MonteCarloEngine.cpp  OnlineCovariance.cpp  OnlineStatistics.cpp  RandomEngine.cpp
src/models/: BlackScholesModel.cpp
src/options/: EuropeanOption.cpp
src/samplers/: AntitheticSampler.cpp  ControlSampler.cpp  MCSampler.cpp
tests/: test_convergence.cpp  test_numerical_validation.cpp
